--- a/assets/main.css
+++ b/assets/main.css
@@ -30,6 +30,10 @@ html {
   margin-top: 16px;
 }
 
+.nuxt-content img {
+  width: 100% !important;
+}
+
 .nuxt-content blockquote {
   border-left: solid 7px #C9C9C9;
   padding-left: 7px;
@@ -39,7 +43,7 @@ html {
   background-color: #1E1E1E !important;
 }
 
-.nuxt-content code {
+.nuxt-content pre code {
   text-shadow: none !important;
   color: white !important;
   background-color: unset !important;
